Modifications: add connecton ways, some details

--- a/Front/src/app/home/home.component.html
+++ b/Front/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <p>
-  First Name: {{ user.given_name }}
+  First Name: {{ user.FirstName }}
 </p>
 
 <p>
-  User Last Name: {{ user.family_name }}
+  User Last Name: {{ user.LastName }}
 </p>
