--- a/Front/src/app/login/login.component.html
+++ b/Front/src/app/login/login.component.html
@@ -2,17 +2,13 @@
   Welcome on the connection page
 </p>
 
-<button (click)="signinWithGoogle()">Sign in with Google</button>
-
-<p>
-  Or swipe your card
-</p>
+<button (click)="signinWithGoogle()"> Sign in with Google </button>
 
 <div>
   <form>
     <div>
-      <label for="name"> Your Card's ID: </label>
-      <input type="password" class="form-control" id="cardid" required [(ngModel)]="idCard" name="card" autofocus>
+      <label for="name"> Scan your card </label>
+      <input type="password" class="form-control" id="cardForm" [(ngModel)]="idCard" name="card" required autofocus>
     </div>
     <button (click)="signinWithCard()"></button>
   </form>
@@ -20,14 +16,4 @@
 
 <br>
 
-<button (click)="writeGoogleAccount()">Associate card and account</button>
-
-<div>
-  <form>
-    <div>
-      <label for="name"> Your Card's ID: </label>
-      <input type="password" class="form-control" id="cardidAsso" required [(ngModel)]="idCardAsso" name="cardAsso">
-    </div>
-    <button (click)="scanCard()"></button>
-  </form>
-</div>
+<button (click)="register()"> Register your card </button>
