--- a/Front/src/app/calendars/pages/user/user.component.html
+++ b/Front/src/app/calendars/pages/user/user.component.html
@@ -1,4 +1,5 @@
-<app-header [user] = 'user' (timeScaleChanged)='getCalendar($event)'></app-header>
+<app-header [user]='this.dataService.user' [timeScale]='timescale' (timeScaleChanged)='getCalendar($event)'>
+</app-header>
 
 <p> Events: </p>
 <ul>
