Modification: beginning of booking functionality

--- a/Front/src/app/calendars/components/header/header.component.html
+++ b/Front/src/app/calendars/components/header/header.component.html
@@ -23,7 +23,7 @@
       </li>
     </ul>
 
-    <div *ngIf="router.url !== '/room'" class="nav-item dropdown">
+    <div *ngIf="router.url !== '/booking'" class="nav-item dropdown">
       <a class="nav-link dropdown-toggle" id="navbardrop" data-toggle="dropdown">
         {{timeScale}}
       </a>
