--- a/Front/src/app/authentication/pages/register/register.component.html
+++ b/Front/src/app/authentication/pages/register/register.component.html
@@ -1,13 +1,15 @@
-<button (click)="enterGoogleAccount()"> Sign in with Google </button>
-
-<p> and then </p>
-
-<div>
-  <form>
-    <div>
-      <label for="name"> Scan your card </label>
-      <input type="password" class="form-control" id="cardForm" [(ngModel)]="idCard" name="card" required autofocus>
-    </div>
-    <button (click)="registerCard()"></button>
-  </form>
+<div class="container">
+  <button (click)="enterGoogleAccount()"> Sign in with Google </button>
+  
+  <p> and </p>
+  
+  <div>
+    <form>
+      <div>
+        <label for="name"> Scan your card </label>
+        <input type="password" class="form-control" id="cardForm" [(ngModel)]="idCard" name="card" required autofocus>
+      </div>
+      <button (click)="registerCard()" hidden></button>
+    </form>
+  </div>
 </div>
