--- a/Front/src/app/calendars/pages/room/room.component.html
+++ b/Front/src/app/calendars/pages/room/room.component.html
@@ -1,1 +1,32 @@
-<app-header [user]='this.dataService.user'></app-header>
+<app-header [user]='this.dataService.user' [timeScale]='timescale' 
+(timeScaleChanged)="getCalendar(this.selectedRoom['Email'], $event)">
+</app-header>
+
+<div class="container">
+  <div>
+    <mat-form-field>
+      <input type="text" placeholder="Choose a room" aria-label="Number" matInput [formControl]="roomsControl" 
+      [matAutocomplete]="autoRoom">
+      <mat-autocomplete #autoRoom="matAutocomplete">
+        <mat-option *ngFor="let room of filteredRooms | async" [value]="room['Name']" (click)="setRoom(room)">
+          {{ room['Name'] }}
+        </mat-option>
+      </mat-autocomplete>
+    </mat-form-field>
+    <fa-icon [icon]="faTimes" (click)="clearRoom()"></fa-icon>
+  </div>
+  
+  <div *ngIf="events.length > 0">
+    <p> Events: </p>
+    <ul>
+      <li *ngFor="let event of events">
+        Title: {{ event['summary'] }}
+        <br> Organizer: {{ event['organizer']['name'] }}
+        <br> Date: {{ event['date'] }}
+        <br> Start-Time: {{ event['start']['dateTime'] }}
+        <br> End-Time: {{ event['end']['dateTime'] }}
+        <br>
+      </li>
+    </ul>
+  </div>
+</div>
