--- a/Front/src/app/calendars/pages/booking/booking.component.html
+++ b/Front/src/app/calendars/pages/booking/booking.component.html
@@ -7,21 +7,53 @@
       <label for="title">Title</label>
       <input type="text" class="form-control" [(ngModel)]="title" name="title" required>
     </div>
-
+    
     <div class="row">
       <div class="form-group">
         <input type="text" class="form-control" #dp="bsDatepicker" bsDatepicker 
-          [(ngModel)]="startDate" name="startDate" 
-          [bsConfig]="{ dateInputFormat: 'MMMM D, YYYY', containerClass: 'theme-dark-blue' }" required>
+        [(ngModel)]="startDate" name="startDate" 
+        [bsConfig]="{ dateInputFormat: 'MMMM D, YYYY', containerClass: 'theme-dark-blue' }" required>
       </div>
       <timepicker [(ngModel)]="startDate" name="startTime" [showSpinners]="hideSpinners"></timepicker>
 
       <div class="form-group">
         <input type="text" class="form-control" #dp="bsDatepicker" bsDatepicker 
-          [(ngModel)]="endDate" name="endDate" 
-          [bsConfig]="{ dateInputFormat: 'MMMM D, YYYY', containerClass: 'theme-dark-blue' }" required>
+        [(ngModel)]="endDate" name="endDate" 
+        [bsConfig]="{ dateInputFormat: 'MMMM D, YYYY', containerClass: 'theme-dark-blue' }" required>
       </div>
       <timepicker [(ngModel)]="endDate" name="endDate" [showSpinners]="hideSpinners"></timepicker>
+    </div>
+
+    <div>
+      <mat-form-field>
+        <input type="text" placeholder="Add a room" aria-label="Number" matInput [formControl]="roomsControl" 
+        [matAutocomplete]="autoRoom">
+        <mat-autocomplete #autoRoom="matAutocomplete">
+          <mat-option *ngFor="let room of filteredRooms | async" [value]="room['Name']" (click)="setRoom(room)">
+            {{ room['Name'] }}
+          </mat-option>
+        </mat-autocomplete>
+      </mat-form-field>
+      <fa-icon [icon]="faTimes" (click)="clearRoom()"></fa-icon>
+    </div>
+
+    <div>
+      <mat-form-field>
+        <input type="text" placeholder="Add attendee" aria-label="Number" matInput [formControl]="attendeesControl" 
+        [matAutocomplete]="autoAttendee">
+        <mat-autocomplete #autoAttendee="matAutocomplete">
+          <mat-option *ngFor="let attendee of filteredAttendees | async"
+          [value]="attendee['FirstName'] + ' ' + attendee['LastName']" (click)="addAttendee(attendee)">
+            {{ attendee['FirstName'] }} {{ attendee['LastName'] }}
+          </mat-option>
+        </mat-autocomplete>
+      </mat-form-field>
+
+      <p>Participants</p>
+      <p *ngFor="let att of attendeesList">
+        {{ att['FirstName'] }} {{ att['LastName']}} : {{ att['Email']}}
+        <fa-icon [icon]="faTimes" (click)="removeAttendee(att)"></fa-icon>
+      </p>
     </div>
 
     <button type="submit" (click)="createEvent()" class="btn btn-success">Submit</button>
