--- a/Front/src/styles.css
+++ b/Front/src/styles.css
@@ -2,3 +2,7 @@
 @import '~bootstrap/dist/css/bootstrap.css';
 @import '~font-awesome/css/font-awesome.css';
 @import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
+
+.cursor {
+  cursor: pointer;
+}
