Modification: add sockets and some functionalities

--- a/Front/src/app/calendars/pages/room/room.component.html
+++ b/Front/src/app/calendars/pages/room/room.component.html
@@ -1,5 +1,5 @@
 <app-header [user]="this.dataService.user" [timeScale]="timescale" [occupancy]="occupancy"
-(timeScaleChanged)="getCalendar(this.selectedRoom['Email'], $event)">
+(timeScaleChanged)="setCalendar(selectedRoom['Email'], $event)">
 </app-header>
 
 <div class="container">
