--- a/Front/src/app/calendars/components/header/header.component.html
+++ b/Front/src/app/calendars/components/header/header.component.html
@@ -16,16 +16,17 @@
         </a>
       </li>
 
-      <li class="nav-item" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}">
-        <a class="nav-link" [routerLink]="['/room']">
-          Room
+      <li *ngFor="let roomName of roomNamesList" class="nav-item" 
+      [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}">
+        <a class="nav-link" [routerLink]="['/room', roomName]">
+          {{ spaceRoomName(roomName) }}
         </a>
       </li>
     </ul>
 
-    <div *ngIf="router.url !== '/booking' && timeScale" class="nav-item dropdown">
+    <div *ngIf="timeScale" class="nav-item dropdown">
       <a class="nav-link dropdown-toggle cursor" id="navbardrop" data-toggle="dropdown">
-        {{timeScale}}
+        {{ timeScale }}
       </a>
       <div class="dropdown-menu">
         <button class="dropdown-item cursor" (click)="changeTimeScale('Day')">Day</button>
@@ -34,7 +35,7 @@
       </div>
     </div>
 
-    <div *ngIf="timeScale && router.url === '/room'" class="nav-item">
+    <div *ngIf="occupancy !== undefined" class="nav-item">
       <span>Occupancy: {{ occupancy }}</span>
     </div>
 
