--- a/Front/src/app/calendars/pages/booking/booking.component.html
+++ b/Front/src/app/calendars/pages/booking/booking.component.html
@@ -5,7 +5,7 @@
   <form>
     <div class="form-group">
       <label for="title">Title</label>
-      <input type="text" class="form-control" [(ngModel)]="title" name="title" required>
+      <input type="text" class="form-control" [(ngModel)]="title" name="title">
     </div>
     
     <div class="row">
@@ -13,7 +13,7 @@
       <div class="form-group">
         <input type="text" class="form-control" #dp="bsDatepicker" bsDatepicker 
         [(ngModel)]="startDate" name="startDate" 
-        [bsConfig]="{ dateInputFormat: 'MMMM D, YYYY', containerClass: 'theme-dark-blue' }" required>
+        [bsConfig]="{ dateInputFormat: 'MMMM D, YYYY', containerClass: 'theme-dark-blue' }">
       </div>
       <timepicker [(ngModel)]="startDate" name="startDate" [showSpinners]="hideSpinners" (mousewheel)="changeEnd()">
       </timepicker>
@@ -24,7 +24,7 @@
       <div class="form-group">
         <input type="text" class="form-control" #dp="bsDatepicker" bsDatepicker 
         [(ngModel)]="endDate" name="endDate" 
-        [bsConfig]="{ dateInputFormat: 'MMMM D, YYYY', containerClass: 'theme-dark-blue' }" required>
+        [bsConfig]="{ dateInputFormat: 'MMMM D, YYYY', containerClass: 'theme-dark-blue' }">
       </div>
       <timepicker [(ngModel)]="endDate" name="endDate" [showSpinners]="hideSpinners" (mousewheel)="changeEventLength()">
       </timepicker>
@@ -39,6 +39,9 @@
             {{ room['Name'] }}
           </mat-option>
         </mat-autocomplete>
+        <div *ngIf="errorRoom" class="alert alert-danger">
+          This room is not available during this period
+        </div>
       </mat-form-field>
       <fa-icon *ngIf="selectedRoom" class="cursor" [icon]="faTimes" (click)="clearRoom()"></fa-icon>
     </div>
@@ -54,7 +57,7 @@
           </mat-option>
         </mat-autocomplete>
       </mat-form-field>
-      <fa-icon *ngIf="coOrga" class="cursor" [icon]="faTimes" (click)="clearCoOrga()"></fa-icon>
+      <fa-icon *ngIf="coOrga !== null" class="cursor" [icon]="faTimes" (click)="clearCoOrga()"></fa-icon>
     </div>
 
     <div>
@@ -72,7 +75,9 @@
       <p>Participants</p>
       <p *ngFor="let att of attendeesList">
         {{ att['FirstName'] }} {{ att['LastName']}} : {{ att['Email']}}
-        <fa-icon *ngIf="(att['Email'] !== this.dataService.user['Email'] && att['Email'] !== coOrga['Email'])"
+        <fa-icon *ngIf="(coOrga === null && att['Email'] !== this.dataService.user['Email'])"
+        class="cursor" [icon]="faTimes" (click)="removeAttendee(att)"></fa-icon>
+        <fa-icon *ngIf="(coOrga !== null && att['Email'] !== coOrga['Email'] && att['Email'] !== this.dataService.user['Email'])" 
         class="cursor" [icon]="faTimes" (click)="removeAttendee(att)"></fa-icon>
       </p>
     </div>
