--- a/Front/src/app/calendars/pages/room/room.component.html
+++ b/Front/src/app/calendars/pages/room/room.component.html
@@ -9,6 +9,9 @@
   <form>
     <div>
       <input #scan type="password" class="form-control" [formControl]="idCardControl">
+      <div *ngIf="cardUnknown === true" class="alert alert-danger">
+        This card is not associated to a user
+      </div>
     </div>
     <button (click)="setUserPosition(idCardControl.value)" hidden></button>
   </form>
