--- a/Front/src/app/calendars/components/header/header.component.html
+++ b/Front/src/app/calendars/components/header/header.component.html
@@ -1,46 +1,54 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <span class="navbar-brand mb-0 h1 name">{{user.FirstName}} {{user.LastName}}</span>
-  
-  <div class="collapse navbar-collapse" *ngIf="insightMember">
-    <!-- ul : If insight member -->
-    <ul class="navbar-nav mr-auto" *ngIf="insightMember === true">
+  <button class="navbar-toggler" data-toggle="collapse" data-target="#collapse_target">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="collapse_target">
+    <span class="navbar-text name">{{nameDefined(user.FirstName)}} {{nameDefined(user.LastName)}}</span>
+    
+    <ul class="navbar-nav mr-auto">
       <li class="nav-item" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}">
         <a class="nav-link" [routerLink]="['/user']">
           Home
         </a>
       </li>
 
-      <li class="nav-item" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}">
+      <li *ngIf="insightMember" class="nav-item" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}">
         <a class="nav-link" [routerLink]="['/booking']">
           Booking
         </a>
       </li>
 
       <li *ngFor="let roomName of roomNamesList" class="nav-item" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}">
-        <a class="nav-link" [routerLink]="['/room', roomName]">
-          {{ spaceRoomName(roomName) }}
+        <a *ngIf="insightMember" class="nav-link" [routerLink]="['/room', roomName]">
+          {{spaceRoomName(roomName)}}
+        </a>
+      </li>
+
+      <li class="nav-item" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}">
+        <a class="nav-link" [routerLink]="['/credits']">
+          Credits
         </a>
       </li>
     </ul>
 
-    <div *ngIf="timeScale" class="nav-item dropdown">
-      <a class="nav-link dropdown-toggle cursor" id="navbardrop" data-toggle="dropdown">
-        {{ timeScale }}
-      </a>
-      <div class="dropdown-menu">
-        <button class="dropdown-item cursor" (click)="changeTimeScale('Day')">Day</button>
-        <button class="dropdown-item cursor" (click)="changeTimeScale('Week')">Week</button>
-        <button class="dropdown-item cursor" (click)="changeTimeScale('Month')">Month</button>
-      </div>
-    </div>
+    <ul class="navbar-nav">
+      <li *ngIf="timeScale" class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle cursor" data-toggle="dropdown" data-target="dropdown_target">
+          {{ timeScale }}
+        </a>
+        <div class="dropdown-menu" aria-labelledby="dropdown_target">
+          <a class="dropdown-item cursor" (click)="changeTimeScale('Day')">Day</a>
+          <a class="dropdown-item cursor" (click)="changeTimeScale('Week')">Week</a>
+          <a class="dropdown-item cursor" (click)="changeTimeScale('Month')">Month</a>
+        </div>
+      </li>
 
-    <div *ngIf="occupancy !== undefined" class="nav-item">
-      <span>Occupancy: {{ occupancy }}</span>
-    </div>
-
-    <!-- <form class="form-inline">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form> -->
+      <li class="nav-item dropdown">
+        <a class="nav-link" (click)="deleteUser()" [routerLink]="['/login']">
+          Log-out
+        </a>
+      </li>
+    </ul>
   </div>
 </nav>
