--- a/Front/src/app/calendars/pages/booking/booking.component.html
+++ b/Front/src/app/calendars/pages/booking/booking.component.html
@@ -1,80 +1,77 @@
 <app-header [user]='this.dataService.user'></app-header>
 
 <div class="container">
-  <h1>Create an event</h1>
   <form>
-    <div class="form-group">
-      <label for="title">Title</label>
-      <input type="text" class="form-control" [(ngModel)]="title" name="title">
+    <div id="title" class="element">
+      <input type="text" placeholder="Title" class="form-control" [(ngModel)]="title" name="title">
     </div>
     
-    <div class="row">
-      <p> Start </p>
-      <div class="form-group">
+    <div class="container row times element">
+      <p class="info"> <strong> Start </strong> </p>
+      <div>
         <input type="text" class="form-control" #dp="bsDatepicker" bsDatepicker 
         [(ngModel)]="startDate" name="startDate" 
         [bsConfig]="{ dateInputFormat: 'MMMM D, YYYY', containerClass: 'theme-dark-blue' }">
       </div>
-      <timepicker [(ngModel)]="startDate" name="startDate" [showSpinners]="hideSpinners" (mousewheel)="changeEnd()">
+      <timepicker [(ngModel)]="startDate" name="startDate" (change)="changeEnd()" (click)="changeEnd()" (mousewheel)="changeEnd()">
       </timepicker>
     </div>
 
-    <div class="row">
-      <p> End </p>
-      <div class="form-group">
+    <div class="container row times element">
+      <p class="info"> <strong> End </strong> </p>
+      <div>
         <input type="text" class="form-control" #dp="bsDatepicker" bsDatepicker 
         [(ngModel)]="endDate" name="endDate" 
         [bsConfig]="{ dateInputFormat: 'MMMM D, YYYY', containerClass: 'theme-dark-blue' }">
       </div>
-      <timepicker [(ngModel)]="endDate" name="endDate" [showSpinners]="hideSpinners" (mousewheel)="changeEventLength()">
+      <timepicker [(ngModel)]="endDate" name="endDate" (change)="changeEventLength()" (click)="changeEventLength()" (mousewheel)="changeEventLength()">
       </timepicker>
     </div>
 
-    <div>
+    <div class="element">
       <mat-form-field>
         <input type="text" placeholder="Add a room" aria-label="Number" matInput [formControl]="roomsControl" 
         [matAutocomplete]="autoRoom">
         <mat-autocomplete #autoRoom="matAutocomplete">
           <mat-option *ngFor="let room of filteredRooms | async" [value]="room['Name']" (click)="setRoom(room)">
-            {{ room['Name'] }}
+            {{room['Name']}}
           </mat-option>
         </mat-autocomplete>
-        <div *ngIf="errorRoom" class="alert alert-danger">
-          This room is not available during this period
-        </div>
       </mat-form-field>
       <fa-icon *ngIf="selectedRoom" class="cursor" [icon]="faTimes" (click)="clearRoom()"></fa-icon>
     </div>
 
-    <div>
+    <div class="element">
       <mat-form-field>
         <input type="text" placeholder="Add a co-organizer" aria-label="Number" matInput [formControl]="coOrgaControl"
         [matAutocomplete]="autoCoOrga">
         <mat-autocomplete #autoCoOrga="matAutocomplete">
           <mat-option *ngFor="let coOrga of filteredAttendees | async" 
           [value]="coOrga['FirstName'] + ' ' + coOrga['LastName']" (click)="setCoOrga(coOrga)">
-             {{ coOrga['FirstName'] }} {{ coOrga['LastName']}}
+             {{coOrga['FirstName']}} {{coOrga['LastName']}}
           </mat-option>
         </mat-autocomplete>
       </mat-form-field>
       <fa-icon *ngIf="coOrga !== null" class="cursor" [icon]="faTimes" (click)="clearCoOrga()"></fa-icon>
     </div>
 
-    <div>
+    <div class="element">
       <mat-form-field>
         <input type="text" placeholder="Add attendee" aria-label="Number" matInput [formControl]="attendeesControl" 
         [matAutocomplete]="autoAttendee">
         <mat-autocomplete #autoAttendee="matAutocomplete">
           <mat-option *ngFor="let attendee of filteredAttendees | async"
           [value]="attendee['FirstName'] + ' ' + attendee['LastName']" (click)="addAttendee(attendee)">
-            {{ attendee['FirstName'] }} {{ attendee['LastName'] }}
+            {{attendee['FirstName']}} {{attendee['LastName']}}
           </mat-option>
         </mat-autocomplete>
       </mat-form-field>
+    </div>
 
-      <p>Participants</p>
-      <p *ngFor="let att of attendeesList">
-        {{ att['FirstName'] }} {{ att['LastName']}} : {{ att['Email']}}
+    <div class="element">
+      <p class="participants"><strong> Participants </strong></p>
+      <p *ngFor="let att of attendeesList" class="participants">
+        {{att['FirstName']}} {{att['LastName']}} : {{att['Email']}}
         <fa-icon *ngIf="(coOrga === null && att['Email'] !== this.dataService.user['Email'])"
         class="cursor" [icon]="faTimes" (click)="removeAttendee(att)"></fa-icon>
         <fa-icon *ngIf="(coOrga !== null && att['Email'] !== coOrga['Email'] && att['Email'] !== this.dataService.user['Email'])" 
@@ -82,6 +79,6 @@
       </p>
     </div>
 
-    <button type="submit" (click)="createEvent()" class="btn btn-success">Submit</button>
+    <button id="submit" type="submit" (click)="createEvent()" class="btn btn-success">Submit</button>
   </form>
 </div>
